--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,7 +3,7 @@ FROM python:3.11-slim
 # Set working directory
 WORKDIR /app
 
-# Install system dependencies
+# Install minimal system dependencies
 RUN apt-get update && apt-get install -y \
     postgresql-client \
     build-essential \
@@ -25,7 +25,7 @@ COPY . .
 # Expose port
 EXPOSE 8000
 
-# Run migrations and start Gunicorn
+# Run migrations and start Gunicorn (2 workers - fits in 256MB free tier)
 CMD . .venv/bin/activate && \
     python manage.py migrate --noinput && \
     gunicorn config.wsgi:application --bind 0.0.0.0:8000 --workers 2
