--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -8,7 +8,7 @@ dependencies = [
     "django>=5.0.1",
     "djangorestframework>=3.14.0",
     "django-cors-headers>=4.3.1",
-    # Database & PostGIS
+    # Database
     "psycopg2-binary>=2.9.9",
     "django-environ>=0.11.2",
     # Authentication
