--- a/frontend/package.json
+++ b/frontend/package.json
@@ -51,6 +51,7 @@
     "@types/node": "^24.9.1",
     "@vitejs/plugin-react": "^4.3.4",
     "@vitest/ui": "^2.1.0",
+    "baseline-browser-mapping": "^2.9.11",
     "typescript": "^5.9.3",
     "vite": "^6.0.0",
     "vitest": "^4.0.7"
